# Weather-Agent-Crew

./: .env  README.md  pyproject.toml  training_data.pkl
db/: chroma.sqlite3
src/weather_internet_agent_chat/: crew.py  main.py  weather.py
src/weather_internet_agent_chat/.chainlit/: config.toml
src/weather_internet_agent_chat/config/: agents.yaml  tasks.yaml
src/weather_internet_agent_chat/tools/: weather_tool.py
